<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav"
        android:title="@string/home_bottom_title"
        android:icon="@drawable/ic_home_bottom"/>

    <item
        android:id="@+id/order_nav"
        android:icon="@drawable/ic_order_bottom"
        android:title="@string/history_bottom_title"/>

    <item
        android:id="@+id/cart_nav"
        android:icon="@drawable/ic_cart_bottom"
        android:title="@string/cart_bottom_title"/>

    <item
        android:id="@+id/favorite_nav"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_bottom_title"/>


    <item
        android:id="@+id/account_nav"
        android:icon="@drawable/ic_account_bottom"
        android:title="@string/account_bottom_title"/>

</menu>