<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.kingz.delivery.fragment.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/logo_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/logo" />


    <TextView
        android:id="@+id/regis_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/asap_medium"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="32dp" />



    <EditText
        android:id="@+id/number_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/regis_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/edit_text_round"
        android:drawableLeft="@drawable/ic_phone_number"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="number"
        android:paddingLeft="15dp" />


    <CheckBox
        android:id="@+id/policy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sign_up_btn"
        android:layout_below="@+id/number_phone"
        android:layout_marginStart="19dp"
        android:layout_marginTop="23dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/policy_text" />


    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/number_phone"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:background="@drawable/skip_btn"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/dessert" />




</RelativeLayout>
