<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.kingz.delivery.fragment.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/location_button">


        <TextView
            android:id="@+id/to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/current_location"
            android:layout_alignBottom="@+id/current_location"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/delivery_to"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/to_text"
            android:text="@string/current_location"
            android:textColor="@color/colorBlack"
            android:textSize="15dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="100dp"
            android:src="@drawable/location" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_arrow" />



    </RelativeLayout>

        <RelativeLayout

            android:id="@+id/search_layout"
            android:layout_width="380dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/location_layout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/seach_button">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/textView2"
                android:src="@drawable/ic_search" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@drawable/seach_button"
                android:gravity="center"
                android:text="@string/search_text" />


        </RelativeLayout>



    <RelativeLayout

        android:id="@+id/restaurant_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_layout"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_marginLeft="10dp"

            android:layout_marginTop="20dp"
            android:id="@+id/total_restaurant_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/restaurant_shop"
            android:textSize="18dp" />

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/restaurant_recycleview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_restaurant_text" />


    </RelativeLayout>

    </LinearLayout>
</ScrollView>






    <!-- TODO: Update blank fragment layout -->



